--- a/index.html
+++ b/index.html
@@ -79,14 +79,153 @@
 					</div>
 				</div>
 				<div class="about__body">
-					<div class="about__title">О компании</div>
+					<h2 class="about__title title">О компании</h2>
 					<div class="about__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</div>
 					<a href='' class="about__button button__ref">ЧИТАТЬ</a>
 				</div>
 			</div>
 		</section>
+		<section class="page__tasks tasks">
+			<div class="tasks__container container">
+				<h2 class="tasks__title title">Основные задачи</h2>
+				<div class="tasks__body ">
+					<div class="task__column">
+						<div class="task__number">1</div>
+						<div class="task__text">
+							<p>Создание комфортных условий и повышение качества обслуживания клиентов</p>
+						</div>
+					</div>
+					<div class="task__column">
+						<div class="task__number">2</div>
+						<div class="task__text">
+							<p>Постоянно совершенствовать качество предоставляемых услуг путем обучения персонала, закупки нового оборудования и усиленной рекламы на рынке</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="page__projects projects">
+			<div class="projects__container container">
+				<h2 class="projects__title title">Наши проекты</h2>
+				 <div class="projects__body">
+				 	<div class="project__item">
+				 		<div class="project__image">
+				 			<a href="#" class="project__image_link"><img src="img/projects/01.jpg" alt="building"></a>
+				 		</div>
+				 		<div class="project__image_body">
+				 			<h3 class="project__title">ДОСУГОВЫЙ ЦЕНТР</h3>
+				 		<a href="#" class="project__button ">ПОДРОБНЕЕ</a>
+				 		</div>
+				 	</div>
+                    <div class="project__item">
+				 		<div class="project__image">
+				 			<img src="img/projects/02.jpg" alt="entrance">
+				 		</div>
+				 	</div>
+				 	<div class="project__item">
+				 		<div class="project__image">
+				 			<img src="img/projects/03.jpg" alt="area">
+				 		</div>
+				 	</div>
+				 	<div class="project__item">
+				 		<div class="project__image">
+				 			<img src="img/projects/04.jpg" alt="home">
+				 		</div>
+				 	</div>
+				 	<div class="project__item">
+				 		<div class="project__image">
+				 			<img src="img/projects/05.jpg" alt="entertain">
+				 		</div>
+				 	</div>
+				 </div>
+				 <a href="" class="projects__button button__ref">ВСЕ ПРОЕКТЫ</a>
+			</div>
+		</section>
+		<section class="page__connect connect">
+			<div class="connect__container container">
+				<h2 class="connect__title title">Связаться с нами</h2>
+				<div class="connect__body">
+					<form action="#" class="connect__form form">
+						<div class="form__item" >
+							<input type="text" placeholder="Имя" class="form__input">
+						</div>
+						<div class="form__item" id='tel'>
+							<input type="tel" placeholder="Номер телефона" class="form__input">
+						</div>
+						<div class="form__item" id='email'>
+							<input type="email" placeholder="E-mail" class="form__input">
+						</div>
+						<div class="form__item">
+							<input type="text" placeholder="Интересующий товар/услуга" class="form__input">
+						</div>
+						<div class="form__item" id='message'>
+							<textarea class="form__input" placeholder="Сообщение"></textarea>
+						</div>
+						<p class="form__warning">Отправляя заявку Вы соглашаетесь с политикой конфиденциальности</p>
+						<button type='submit'class="form__button button__ref">ОТПРАВИТЬ</button>
+					</form>
+					<div class="connect__image">
+						<img src="img/connect/connect.jpg" alt="dialing">
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
+<footer class="footer">
+	<div class="footer__container container">
+		 <div class="footer__body">
+		<a href="#" class="footer__logo">
+			<img src="img/footer/footerlogo.svg" alt="">
+		</a>
+		<div class="footer__info info">
+			<h3 class="info__label">Информация</h3>
+			<ul class="info__list">
+				<li class="info__item"><a href="#" class="info__link">Главная</a></li>
+				<li class="info__item"><a href="#" class="info__link">Галерея</a></li>
+				<li class="info__item"><a href="#" class="info__link">Проекты</a></li>
+				<li class="info__item"><a href="#" class="info__link">Сертификаты</a></li>
+				<li class="info__item"><a href="#" class="info__link">Контакты</a></li>
+			</ul>
+		</div>
+		<div class="footer__contacts contacts">
+			<h3 class="contacts__label">Контакты</h3>
+			<ul class="contacts__list">
+				<li class="contacts__item"><a href="#" class="contacts__link">100000, Республика  Казахстан, г. Караганда, ул. Телевизионная 10</a></li>
+				<li class="contacts__item"><a href="tel:+380000000000" class="contacts__link">+38 (000) 000 00 00</a></li>
+				<li class="contacts__item"><a href="mailto:mail@gmail.com" class="contacts__link">mail@gmail.com</a></li>
+			</ul>
+		</div>
+		<div class="footer__social social">
+			<h3 class="social__label">Социальные сети</h3>
+			<ul class="social__list">
+				<li class="social__item">
+					<div class="social__icon">
+						<a href="#" class=""><img src="img/footer/social/facebook.svg" alt="facebook"></a>
+					</div>
+				</li>
+				<li class="social__item">
+					<div class="social__icon">
+						<a href="#" class=""><img src="img/footer/social/twitter.svg" alt="twitter"></a>
+					</div>
+				</li>
+				<li class="social__item">
+					<div class="social__icon">
+						<a href="#" class=""><img src="img/footer/social/linkedin.svg" alt="linkedin"></a>
+					</div>
+				</li>
+				<li class="social__item">
+					<div class="social__icon">
+						<a href="#" class=""><img src="img/footer/social/another.svg" alt="another"></a>
+					</div>
+				</li>
+			</ul>
+		</div>
+	  </div>
+	  <div class="footer__copyright">
+	  	© 2019 Digital Project. Все права защищены.
+	  </div>
 	</div>
+</footer>	</div>
 	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 	<script src='js/script.js'></script>
 </body>
